--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -6,9 +6,15 @@
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   </properties>
+	<parent>
+		<groupId>com.epam.brest.courses</groupId>
+		<version>1.0.0-SNAPSHOT</version> 
+		<artifactId>sampleusermanagment</artifactId>
+	</parent>
+   
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
    <dependencies>
       <dependency>
