--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
    
    <modules>
 	   <module>app-core</module>
+       <module>app-dao</module>
    </modules>
    
    <properties>
@@ -16,7 +17,17 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>app-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>app-dao</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
