add first Test in Dao module and edit "sampleusermanagement"

--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.epam.brest.courses</groupId>
         <version>1.0.0-SNAPSHOT</version>
-        <artifactId>sampleusermanagment</artifactId>
+        <artifactId>sampleusermanagement</artifactId>
     </parent>
 
     <properties>
