--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.epam.brest.courses</groupId> 
-   <artifactId>sampleusermanagment</artifactId>
+   <artifactId>sampleusermanagement</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    
