--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,24 @@
 <project>
-   <modelVersion>4.0.0</modelVersion>
-   
-   <groupId>com.epam.brest.courses</groupId> 
-   <artifactId>sampleusermanagement</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
-   <packaging>pom</packaging>
-   
-   <modules>
-	   <module>app-core</module>
-       <module>app-dao</module>
-       <module>app-service</module>
-   </modules>
-   
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-       <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
-   </properties>
+    <modelVersion>4.0.0</modelVersion>
 
-	<dependencyManagement>
-		<dependencies>
+    <groupId>com.epam.brest.courses</groupId>
+    <artifactId>sampleusermanagement</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>app-core</module>
+        <module>app-dao</module>
+        <module>app-service</module>
+    </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>app-core</artifactId>
@@ -64,12 +64,17 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.11</version>
-				<scope>test</scope>
-			</dependency>
-
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>3.2</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
@@ -80,6 +85,6 @@
                 <artifactId>log4j-core</artifactId>
                 <version>2.1</version>
             </dependency>
-		</dependencies>
-	</dependencyManagement>
+        </dependencies>
+    </dependencyManagement>
 </project>
