--- a/app-web/src/main/webapp/WEB-INF/web.xml
+++ b/app-web/src/main/webapp/WEB-INF/web.xml
@@ -13,12 +13,24 @@
     <filter>
         <filter-name>cross-origin</filter-name>
         <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+        <init-param>
+            <param-name>dispatchOptionsRequest</param-name>
+            <param-value>true</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>cross-origin</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>optionsFilter</filter-name>
+        <filter-class>com.epam.brest.courses.rest.OptionsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>optionsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet-mapping>
         <servlet-name>springDispatchServlet</servlet-name>
         <url-pattern>/</url-pattern>
