--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlets</artifactId>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time-jsptags</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
