--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
                 <artifactId>jetty-servlets</artifactId>
                 <version>9.2.4.v20141103</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time-jsptags</artifactId>
+                <version>1.1.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
