--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
         <jackson.databind-version>2.4.3</jackson.databind-version>
+        <sitemesh.version>3.0-alpha-2</sitemesh.version>
     </properties>
     <build>
         <plugins>
@@ -151,6 +152,11 @@
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time-jsptags</artifactId>
                 <version>1.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sitemesh</groupId>
+                <artifactId>sitemesh</artifactId>
+                <version>${sitemesh.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
