Add client to project

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>app-rest</module>
         <module>app-web</module>
         <module>app-rest-client</module>
+        <module>app-service-client</module>
+        <module>app-web-client</module>
     </modules>
     <properties>
         <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
@@ -64,6 +66,11 @@
             <dependency>
                 <groupId>com.denispalchuk.epam.task</groupId>
                 <artifactId>app-rest-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>app-service-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
